iter_language/tests/corpus/invalid/unknown-event.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: unknown-event.iter
---
Error: unknown event name `no_such_event`
   ╭─[unknown-event.iter:2:4]
   │
 2 │ on no_such_event {
   │    ──────┬──────  
   │          ╰──────── unknown event name `no_such_event`
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[unknown-event.iter:1:1]
   │
 1 │ queue memory
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
